# roq-htx

./: CHANGELOG.md  CMakeLists.txt  README.md
benchmark/: .gitignore
conda/: meta.yaml
docker/: Dockerfile  README.md
share/: config.toml
share/flags/prod/: flags-aws.cfg  flags.cfg
src/roq/: CMakeLists.txt
src/roq/htx/: .gitignore  CMakeLists.txt  account.cpp  account.hpp  api.cpp  api.hpp  application.cpp  application.hpp  config.cpp  config.hpp  drop_copy.cpp  drop_copy.hpp  drop_copy_state.json  gateway.cpp  gateway.hpp  index.rst  live.sh  main.cpp  market_data.cpp  market_data.hpp  mbp_feed.cpp  mbp_feed.hpp  order_entry.cpp  order_entry.hpp  order_entry_state.json  rest.cpp  rest.hpp  rest_state.json  settings.cpp  settings.hpp  shared.cpp  shared.hpp
src/roq/htx/fix_bridge/: .gitignore  application.cpp  application.hpp  config.hpp  live.sh  main.cpp  settings.cpp  settings.hpp
src/roq/htx/flags/: .gitignore  CMakeLists.txt  flags.json  misc.json  rest.json  settings.cpp  settings.hpp  ws.json
src/roq/htx/gateway/: CMakeLists.txt  account.cpp  account.hpp  api.cpp  api.hpp  config.cpp  config.hpp  controller.cpp  controller.hpp  drop_copy.cpp  drop_copy.hpp  market_data.cpp  market_data.hpp  mbp_feed.cpp  mbp_feed.hpp  order_entry.cpp  order_entry.hpp  rest.cpp  rest.hpp  settings.hpp  shared.cpp  shared.hpp
src/roq/htx/json/: .gitignore  CMakeLists.txt  account_state.json  account_type.json  accounts.json  accounts_ack.json  accounts_ack_data_item.json  accounts_data.json  accounts_data_item.json  action.json  balance.json  balance_ack.json  balance_ack_data.json  balance_ack_data_list_item.json  balance_data.json  balance_data_list_item.json  bbo.json  bbo_tick.json  cancel_all_orders_ack.json  cancel_order_ack.json  clearing.json  clearing_data.json  currencies.json  detail.json  detail_tick.json  direction.json  encoder.cpp  encoder.hpp  error.json  error_2.json  event_type.json  frame.json  map.cpp  map.hpp  market_status.json  market_status_data.json  mbp.json  mbp_snapshot.json  mbp_snapshot_data.json  mbp_tick.json  (+34 more)
src/roq/htx/protocol/json/: .gitignore  CMakeLists.txt  account_state.json  account_type.json  accounts.json  accounts_ack.json  accounts_ack_data_item.json  accounts_data.json  action.json  balance_ack.json  balance_ack_data.json  balance_ack_data_list_item.json  bbo.json  bbo_tick.json  cancel_all_orders_ack.json  cancel_order_ack.json  clearing.json  clearing_data.json  currencies.json  detail.json  detail_tick.json  direction.json  encoder.cpp  encoder.hpp  error.json  error_2.json  event_type.json  map.cpp  map.hpp  market_status.json  market_status_data.json  mbp.json  mbp_snapshot.json  mbp_snapshot_data.json  mbp_tick.json  open_orders_ack.json  open_orders_ack_data_item.json  order_status.json  order_type.json  orders.json  (+26 more)
src/roq/htx/tools/: crypto.cpp  crypto.hpp
src/roq/huobi/: .gitignore  CMakeLists.txt  account.cpp  account.hpp  application.cpp  application.h  application.hpp  authenticator.cpp  authenticator.hpp  config.cpp  config.h  config.hpp  drop_copy.cpp  drop_copy.h  drop_copy.hpp  drop_copy_state.json  flags.cpp  flags.h  flags.hpp  gateway.cpp  gateway.h  gateway.hpp  index.rst  live.sh  main.cpp  market_data.cpp  market_data.h  market_data.hpp  mbp_feed.cpp  mbp_feed.h  mbp_feed.hpp  order_entry.cpp  order_entry.h  order_entry.hpp  order_entry_state.json  rest.cpp  rest.h  rest.hpp  rest_state.json  security.cpp  (+7 more)
src/roq/huobi/config/: huobi.toml
src/roq/huobi/flags/: .gitignore  CMakeLists.txt  common.json  flags.json  misc.json  rest.json  ws.json
src/roq/huobi/json/: .gitignore  CMakeLists.txt  agg_trade.json  balances_item.json  bbo.json  bbo_tick.json  book_ticker.json  cancel_order.json  currencies.json  depth_update.json  detail.json  detail_tick.json  error.json  event_type.json  exchange_info.json  execution_report.json  execution_type.json  fill.json  filter_type.json  frame.json  map.cpp  map.hpp  market_status.json  market_status_data.json  market_stream_parser.cpp  market_stream_parser.h  mbp.json  mbp_snapshot.json  mbp_snapshot_data.json  mbp_tick.json  new_order.json  order_status.json  outbound_account_info.json  outbound_account_position.json  parser.cpp  parser.h  parser.hpp  partition.json  ping.json  quotation.json  (+20 more)
src/roq/huobi/test/: CMakeLists.txt  json_bbo.cpp  json_currencies.cpp  json_detail.cpp  json_market_status.cpp  json_mbp.cpp  json_mbp_snapshot.cpp  json_symbols.cpp  json_ticker.cpp  json_trade.cpp  json_utils.cpp
src/roq/huobi/tools/: crypto.cpp  crypto.hpp  hasher.cpp  hasher.h  hasher.hpp
test/: .gitignore  CMakeLists.txt  json_accounts.cpp  json_accounts_ack.cpp  json_balance.cpp  json_balance_ack.cpp  json_bbo.cpp  json_cancel_all_orders_ack.cpp  json_cancel_order_ack.cpp  json_clearing.cpp  json_currencies.cpp  json_detail.cpp  json_error.cpp  json_error_2.cpp  json_market_status.cpp  json_mbp.cpp  json_mbp_snapshot.cpp  json_open_orders.cpp  json_open_orders_ack.cpp  json_orders.cpp  json_ping.cpp  json_ping_2.cpp  json_place_order_ack.cpp  json_req.cpp  json_sub.cpp  json_subbed.cpp  json_symbols.cpp  json_ticker.cpp  json_trade.cpp  json_utils.cpp  parser_tester.hpp
